fix(activity-detail): preserve line breaks in activity descriptions (#22)
- implement new CSS class `preserve-linebreaks` in `fitpub.css`
- add new CSS class to activity description element in `detail.html`

--- a/src/main/resources/static/css/fitpub.css
+++ b/src/main/resources/static/css/fitpub.css
@@ -92,6 +92,11 @@ p,
     letter-spacing: normal;
 }
 
+/* Preserve line-breaks */
+.preserve-linebreaks {
+    white-space: pre-line;
+}
+
 /* Navigation */
 .navbar {
     background: linear-gradient(135deg, var(--dark-color) 0%, #2d0052 100%) !important;
